# original_joj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: UpdateSubmodules.cmake
include/: CMakeLists.txt
include/joj/: CMakeLists.txt  app.h  defines.h  engine.h  error.h  error_code.h  error_codes.h  joj.h  logger.h
include/joj/graphics/: CMakeLists.txt  context.h
include/joj/graphics/dx11/: context_dx11.h
include/joj/graphics/opengl/: joj_gl.h
include/joj/graphics/opengl/win32/: CMakeLists.txt  context_gl.h
include/joj/graphics/opengl/x11/: joj_gl_x11.h
include/joj/graphics/x11/: CMakeLists.txt  context_gl.h
include/joj/math/: CMakeLists.txt  jmath.h  matrix4.h  vector2.h  vector3.h  vector4.h
include/joj/platform/: CMakeLists.txt  icon_image.h  input.h  keys.h  platform_manager.h  timer.h  window.h
include/joj/platform/context/: CMakeLists.txt  context.h
include/joj/platform/context/dx11/: CMakeLists.txt  context_dx11.h
include/joj/platform/context/opengl/: CMakeLists.txt  joj_gl.h  oldjoj_gl.h
include/joj/platform/context/opengl/win32/: context_gl.h
include/joj/platform/context/opengl/x11/: CMakeLists.txt  context_gl.h
include/joj/platform/win32/: CMakeLists.txt  input_win32.h  platform_manager_win32.h  timer_win32.h  window_win32.h
include/joj/platform/x11/: CMakeLists.txt  input_x11.h  platform_manager_x11.h  timer_x11.h  window_x11.h
include/joj/renderer/: CMakeLists.txt  renderer.h  shader.h  viewport.h
include/joj/renderer/dx11/: CMakeLists.txt  blend_state_dx11.h  depth_stencil_manager_dx11.h  index_buffer_dx11.h  obj_const_buffer_dx11.h  rasterizer_dx11.h  renderer_dx11.h  shader_dx11.h  swapchain_dx11.h  vertex_buffer_dx11.h  viewport_dx11.h
include/joj/renderer/opengl/: CMakeLists.txt  animation2d_gl.h  ebo.h  render_object.h  renderer_gl.h  shader_gl.h  shader_library_gl.h  texture_gl.h  texture_rect_gl.h  vao.h  vbo.h
include/joj/resources/: CMakeLists.txt  mesh.h  resource_manager.h  vertex.h
include/joj/resources/geometry/: CMakeLists.txt  cube.h  cylinder.h  geo_sphere.h  geometry.h  grid.h  quad.h  sphere.h  vertex.h
include/joj/systems/: CMakeLists.txt  camera.h  light.h  material.h
samples/: CMakeLists.txt  app_dx11.h  app_gl.h  main.cpp  main_win32.cpp  main_x11.cpp
samples/shaders/: frag.glsl  light_helper.hlsl  pixel.hlsl  vert.hlsl  vertex.glsl
src/: CMakeLists.txt  app.cpp  engine.cpp  error.cpp  error_code.cpp  joj.cpp  logger.cpp
src/graphics/: CMakeLists.txt  context.cpp
src/graphics/dx11/: CMakeLists.txt  context_dx11.cpp
src/graphics/opengl/win32/: CMakeLists.txt  context_gl.cpp  joj_gl_win32.cpp
src/graphics/opengl/x11/: context_gl.cpp  joj_gl_x11.cpp
src/graphics/x11/: CMakeLists.txt  context_gl.cpp
src/platform/: CMakeLists.txt  input.cpp  platform_manager.cpp  timer.cpp  window.cpp
src/platform/context/: CMakeLists.txt  context.cpp
src/platform/context/dx11/: CMakeLists.txt  context_dx11.cpp
src/platform/context/opengl/: CMakeLists.txt
src/platform/context/opengl/win32/: CMakeLists.txt  context_gl.cpp  joj_gl_win32.cpp
src/platform/context/opengl/x11/: CMakeLists.txt  context_gl.cpp  joj_gl_x11.cpp
src/platform/win32/: CMakeLists.txt  input_win32.cpp  platform_manager_win32.cpp  timer_win32.cpp  window_win32.cpp
src/platform/x11/: CMakeLists.txt  input_x11.cpp  platform_manager_x11.cpp  timer_x11.cpp  window_x11.cpp
src/renderer/: CMakeLists.txt  renderer.cpp  shader.cpp  viewport.cpp
src/renderer/dx11/: CMakeLists.txt  blend_state_dx11.cpp  depth_stencil_manager_dx11.cpp  index_buffer_dx11.cpp  obj_const_buffer_dx11.cpp  rasterizer_dx11.cpp  renderer_dx11.cpp  shader_dx11.cpp  swapchain_dx11.cpp  vertex_buffer_dx11.cpp  viewport_dx11.cpp
src/renderer/opengl/: CMakeLists.txt  animation2d_gl.cpp  ebo.cpp  render_object.cpp  renderer_gl.cpp  shader_gl.cpp  texture_gl.cpp  texture_rect_gl.cpp  vao.cpp  vbo.cpp
src/resources/: CMakeLists.txt  mesh.cpp  resource_manager.cpp
src/resources/geometry/: CMakeLists.txt  cube.cpp  cylinder.cpp  geo_sphere.cpp  geometry.cpp  grid.cpp  quad.cpp  sphere.cpp
src/systems/: CMakeLists.txt  camera.cpp
testbed/: main.cpp
tests/: CMakeLists.txt  main.cpp  math.cpp
